# thread

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: metadata.json  strands.duckdb
.beads/embeddeddolt/strands/: config.yaml
.beads/embeddeddolt/strands/.dolt/: config.json  repo_state.json
.beads/embeddeddolt/strands/.dolt/git-remote-cache/d71f00f94e25ce3ce3aa09aebf2d1122966c05d0b31e948f8882d7f23d2a7f04/repo.git/: FETCH_HEAD  config
.beads/embeddeddolt/strands/.dolt/noms/: journal.idx  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/embeddeddolt/strands/.dolt/stats/.dolt/noms/: journal.idx  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
docs/: DESIGN_v0.5.md  DESIGN_v0.7.md  agent-vs-human-identification.md
tests/: conftest.py  test_actor_classifier.py  test_cli.py  test_dolt.py  test_extractor.py  test_integration.py  test_prime.py  test_report.py  test_schema.py  test_views.py
thread/: actor_classifier.py  cli.py  dolt.py  extractor.py  prime.py  report.py  schema.sql
