[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beads-thread"
version = "0.1.0"
description = "Read-only forensics and analytics layer for Beads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "duckdb>=1.5.1",
    "pymysql>=1.1.2",
]

[project.scripts]
thread = "thread.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["thread"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running Dolt binary and sample data",
]
